# python-elt-pipeline

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/fxpipeline/: __init__.py  __main__.py  cli.py  config.py  extract.py  load.py  logging_conf.py  pipeline.py  transform.py
tests/: conftest.py  test_cli.py  test_config.py  test_extract.py  test_load.py  test_logging_conf.py  test_pipeline.py  test_transform.py
