[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fxpipeline"
version = "0.1.0"
description = "Idempotent ELT pipeline for foreign-exchange rates (Frankfurter API -> pandas -> DuckDB)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pavel Salazar" }]
keywords = ["elt", "etl", "analytics-engineering", "duckdb", "pandas", "fx", "forex"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "duckdb>=0.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[project.scripts]
fxpipeline = "fxpipeline.cli:main"

[project.urls]
Homepage = "https://github.com/pavelszr/python-elt-pipeline"
Repository = "https://github.com/pavelszr/python-elt-pipeline"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "B008",  # function call in default argument (FastAPI-style, not used here)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fxpipeline"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["fxpipeline"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
